Fix JavaExecableImp for java 11.